# rust-service-kitstart

./: .env  .gitignore  Cargo.toml  docker-compose.example.yml
domain/models/: Cargo.toml
domain/models/src/: hello_world.rs
domain/repository/: Cargo.toml
domain/repository/src/: hello_world.rs  lib.rs  repository.rs
libs/cli/: Cargo.toml
libs/cli/src/: lib.rs
libs/database/: Cargo.toml  config.example.yaml
libs/database/src/: config.rs  postgres.rs
libs/logger/: Cargo.toml
libs/logger/src/: envlogger.rs  lib.rs  tracer_logger.rs
migrations/: 20240421180319_create_hello_world_table.sql
services/template/: Cargo.toml  config.example.yaml
services/template/src/: config.rs  entries.rs  handler.rs  main.rs
services/template/src/api/: hello.rs  mod.rs  user.rs
