[workspace]
members = [
    "services/template",

    "libs/database",
    "libs/cli",
    "libs/logger",

    "domain/models",
    "domain/repository",
]

[workspace.dependencies]
database = { path = "libs/database" }
cli = { path = "libs/cli" }
logger = { path = "libs/logger" }
models = { path = "domain/models" }
repository = { path = "domain/repository" }
