[workspace]
resolver = "2"
default-members = [
    "services/template",
]
members = [
    "services/template",
    "services/handyman",
    "libs/database",
    "libs/cli",
    "libs/logger",

    "domain/models",
    "domain/repository",
]

[workspace.dependencies]
database = { path = "libs/database" }
cli = { path = "libs/cli" }
logger = { path = "libs/logger" }
models = { path = "domain/models" }
repository = { path = "domain/repository" }
